# chatbot

./: .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
data/: conversation.csv  dataset_RAG.xlsx  dataset_RAG_BACKUP.xlsx  dataset_RAG_BACKUP2.xlsx  dataset_RAG_improvement.xlsx  dataset_RAG_improvment.xlsx  dataset_rag_zurich.xlsx  messages.csv  messages.xls  messages.xlsx  users.csv  ~$dataset_rag_zurich.xlsx
rag/: app.py  app_b2b.py  app_b2c.py  auth.py  config.py  constants.py  datamodels.py  debug.py  dummy_app.py  dummy_app_b2b.py  dummy_app_b2c.py  llm.py  memory.py  query.py  query_backup.py  retriever.py  schema.py  templates.py  utils.py
rag/chatbot/: dummy_answer.py  llm.py  retriever.py  templates.py
