[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["Maicol Rodrigues"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.11"
openai = "^1.13.3"
fastapi = "^0.110.0"
chromadb = "^0.4.24"
pandas = "^2.2.1"
sentence-transformers = "^2.5.1"
pydantic = "^2.6.3"
langchain-community = "^0.0.26"
langchain-openai = "^0.0.8"
openpyxl = "^3.1.2"
pandera = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
