[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["Maicol Rodrigues"]
readme = "README.md"
packages = [{ include = "rag" }]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.13.3"
fastapi = "^0.110.0"
chromadb = "^0.4.24"
pandas = "^2.2.1"
sentence-transformers = "^2.5.1"
pydantic = "^2.6.3"
openpyxl = "^3.1.2"
pandera = "^0.18.0"
psycopg = "^3.1.18"
sqlalchemy = "^2.0.29"
psycopg2 = "^2.9.9"
xlrd = "^2.0.1"
pyjwt = "^2.8.0"
cryptography = "^42.0.5"
boto3 = "^1.34.140"
langchain = "^0.3.1"
langchain-ollama = "^0.2.0"
langchain-openai = "^0.2.1"
datamodels = {git = "https://github.com/Insurapolis/datamodels.git", rev = "main"}
langchain-community = "^0.3.1"
langchain-chroma = "^0.1.4"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
